fixed overflow

--- a/assets/SASS/common/_base.scss
+++ b/assets/SASS/common/_base.scss
@@ -10,6 +10,7 @@ body {
 }
 
 body {
+  overflow-x: hidden;
   background-color: $background
 }
 
