--- a/assets/SASS/components/_carroussel.scss
+++ b/assets/SASS/components/_carroussel.scss
@@ -1,6 +1,7 @@
 .moviesCarrossel {
-  overflow: hidden;
+
   margin-top: 1rem;
+  margin-bottom: 2rem;
   position: relative;
   display: none;
   top: -12rem;
